--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-11-06  Matthew Barnes  <mbarnes@redhat.com>
 
+	* configure.ac: Post-release version bump.
+
+2007-11-06  Matthew Barnes  <mbarnes@redhat.com>
+
 	* NEWS: Update for 0.5.2
 
 	Remember the previous filename used to save audit results, and
