--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-12-10  Matthew Barnes  <mbarnes@redhat.com>
+
+	* POTFILES.in: Add src/gva-categories.c.
+
 2007-11-06  Matthew Barnes  <mbarnes@redhat.com>
 
 	* POTFILES.in: Add src/gva-audit.c.
