--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,7 @@
 GNOME Video Arcade 0.5.4
 ========================
 
-        Released December ??, 2007
+        Released December 27, 2007
 
         What's New
         ----------
