2007-12-28  Matthew Barnes  <mbarnes@redhat.com>
	* configure.ac: Post-release version bump.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-12-28  Matthew Barnes  <mbarnes@redhat.com>
+
+	* configure.ac: Post-release version bump.
+
 2007-12-27  Matthew Barnes  <mbarnes@redhat.com>
 
 	* NEWS: Update for 0.5.4
