--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-26  Matthew Barnes  <mbarnes@redhat.com>
+
+	* README: List GConf as a dependency.
+
 2008-01-12  Matthew Barnes  <mbarnes@redhat.com>
 
 	* data/gnome-video-arcade.glade:
